--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <br/>
 <br/>
 <h1>Welcome to kviver team!</h1>
-<a href="https://github.com/kviver">go to github</a>
+<a href="https://github.com/kviver">go to github</a><br/>
+<a href="https://t.me/kviver">subscribe to telegram channel</a>
