Add logo, font, center everything

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
-<br/>
-<br/>
-<br/>
-<h1>Welcome to kviver team!</h1>
-<a href="https://github.com/kviver">go to github</a><br/>
-<a href="https://t.me/kviver">subscribe to telegram channel</a>
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet"> 
+</head>
+<body style="font-family: 'Fira Sans', sans-serif;">
+    <div style="display: flex; justify-content: center;">
+        <img src="./kviver_logo_big_crop.png" width="25%">
+    </div>
+    <div style="display: flex; justify-content: center;">
+        <h1>Welcome to Kviver team!</h1>
+    </div>
+    <div style="display: flex; justify-content: center;">
+        <a href="https://github.com/kviver">Go to GitHub</a>
+    </div>
+    <div style="display: flex; justify-content: center;">
+        <a href="https://t.me/kviver">Subscribe to Telegram channel</a>
+    </div>
+</body>
