--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 </head>
 <body style="font-family: 'Fira Sans', sans-serif;">
     <div style="display: flex; justify-content: center;">
-        <img src="./kviver_logo_big_crop.png" width="25%">
+        <div style="max-width:392px;">
+            <img src="./kviver_logo_big_crop.png" style="width:100%; height: auto;">
+        </div>
     </div>
     <div style="display: flex; justify-content: center;">
         <h1>Welcome to Kviver team!</h1>
